Cherry-pick 256920@main (a0b92719854d). https://bugs.webkit.org/show_bug.cgi?id=247233

REGRESSION (249229@main): CSS filter does not update on hover
    https://bugs.webkit.org/show_bug.cgi?id=247233
    rdar://101836748

    Reviewed by Darin Adler.

    249229@main made it so that we don't recreate CSSFilter on every paint,
    but there was no code to update the filters when style changed.

    So have `RenderLayer::updateFiltersAfterStyleChange()` clear the filters
    when filter style changes; we'll recreate them on the next paint.

    Also improve some logging output that helped when debugging this.

    * LayoutTests/css3/filters/change-filter-style-expected.html: Added.
    * LayoutTests/css3/filters/change-filter-style.html: Added.
    * Source/WebCore/platform/graphics/filters/FilterEffect.cpp:
    (WebCore::FilterEffect::apply):
    * Source/WebCore/platform/graphics/filters/FilterFunction.cpp:
    (WebCore::operator<<):
    * Source/WebCore/platform/graphics/filters/FilterFunction.h:
    * Source/WebCore/rendering/CSSFilter.cpp:
    (WebCore::CSSFilter::create):
    * Source/WebCore/rendering/RenderLayer.cpp:
    (WebCore::RenderLayer::calculateClipRects const):
    * Source/WebCore/rendering/RenderLayer.h:

    Canonical link: https://commits.webkit.org/256920@main